Fixed issue with parallel <INTEGER>

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -7,6 +7,36 @@
   <description>Apache Pig Language Plugin</description>
 
   <change-notes><![CDATA[
+# IntelliJ - Pig Plugin
+Pig Plugin adds [Apache Pig](http://pig.apache.org/) Language support to [IntelliJ](http://www.jetbrains.com/idea/).
+
+# Features
+* Keyword highlighting
+* Code commenting/uncommenting
+* Brace matching
+* Syntax and errors highlighting
+
+# Installation
+Select the pig-plugin.jar from the plugin manager or install from the IntelliJ plugin repo.
+
+
+## Donations
+If you would like to make a donation you can use [PayPal](https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=T2DA32ERZGGXL&lc=US&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donateCC_LG%2egif%3aNonHosted).
+
+
+## Change log
+
+
+### Version 0.2
+* Bug fixes issues with parens
+* Fixes with keywords in the set property name
+* Fixed order by clause missing simi
+
+### Version 0.1:
+* Keyword highlighting
+* Code commenting/uncommenting
+* Brace matching
+* Syntax and errors highlighting
       ]]>
   </change-notes>
 
