Added schema type autocompletion

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -29,6 +29,11 @@ If you would like to make a donation you can use
 
 <h2>Change log</h2>
 
+<h3>Version 0.3</h3>
+<ul>
+  <li>Data type auto-completion</li>
+</ul>
+
 <h3>Version 0.2</h3>
 <ul>
   <li>Code Folding</li>
