--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -32,7 +32,7 @@ If you would like to make a donation you can use
 <h2>Change log</h2>
 <h3>Version 1.4</h3>
 <p>
-I'm happy to announce that rmelick and I have unified our efforts in the IntelliJ Pig Language Plugin. This release includes any deltas between our codebases.
+We are happy to announce that rmelick and I have unified our efforts in the IntelliJ Pig Language Plugin. This release includes any deltas between our codebases.
 </p>
 <ul>
   <li>Fix SyntaxHighlighter bug that was causing plugin to crash in older version of IDEA (e.x. 11)</li>
