enable plugin for all idea products

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -75,9 +75,8 @@ We are happy to announce that rmelick and I have unified our efforts in the Inte
 
   <!-- please see http://confluence.jetbrains.net/display/IDEADEV/Plugin+Compatibility+with+IntelliJ+Platform+Products
        on how to target different products -->
-  <!-- uncomment to enable plugin in all products
+  <!-- uncomment to enable plugin in all products -->
   <depends>com.intellij.modules.lang</depends>
-  -->
 
   <application-components>
     <!-- Add your application components here -->
