--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -101,9 +101,10 @@ We are happy to announce that rmelick and I have unified our efforts in the Inte
     <lang.syntaxHighlighterFactory key="Pig" implementationClass="org.intellij.pig.PigSyntaxHighlighterFactory"/>
     <colorSettingsPage implementation="org.intellij.pig.PigColorSettingsPage"/>
     <!--<annotator language="JAVA" implementationClass="org.intellij.pig.PigAnnotator"/>-->
-    <completion.contributor language="Pig" implementationClass="org.intellij.pig.lang.completion.PigKeywordCompletionContributor"/>
+    <!--<completion.contributor language="Pig" implementationClass="org.intellij.pig.lang.completion.PigKeywordCompletionContributor"/>-->
     <lang.commenter language="Pig" implementationClass="org.intellij.pig.PigCommenter"/>
     <lang.foldingBuilder language="Pig" implementationClass="org.intellij.pig.PigCodeFoldingBuilder"/>
+    <psi.referenceContributor implementation="org.intellij.pig.PigIdentifierReferenceContributor"/>
 
   </extensions>
 </idea-plugin>
